Fixed The Gap Issue in Admin Dashboard

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,18 @@ button{
   --color-tahiti: #3ab7bf;
   --color-bermuda: #78dcca;
 }
+
+.main-container {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+/* Large screens (≥1024px) */
+@media (min-width: 1024px) {
+  .main-container {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
